src/main/default/objects/narrate_LoggingSetting__mdt/narrate_LoggingSetting__mdt.object-meta.xml
<CustomObject>
    <label>Logging Setting</label>
    <pluralLabel>Logging Settings</pluralLabel>
</CustomObject>