src/main/default/objects/narrate_LoggingSetting__mdt/fields/FilterLogic__c.field-meta.xml
<CustomField>
    <fullName>FilterLogic__c</fullName>
    <label>Filter Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>narrate_ExactFilterLogic</fullName>
                <default>true</default>
                <label>Exact Filter Logic</label>
            </value>
            <value>
                <fullName>narrate_SimpleFilterLogic</fullName>
                <label>Simple Filter Logic</label>
            </value>
            <value>
                <fullName>narrate_ComplexFilterLogic</fullName>
                <label>Complex Filter Logic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>