src/main/default/objects/narrate_LoggingSetting__mdt/fields/Logic__c.field-meta.xml
<CustomField>
    <fullName>Logic__c</fullName>
    <label>Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>