src/main/default/objects/narrate_LoggingSetting__mdt/fields/narrate_Active__c.field-meta.xml
<CustomField>
    <fullName>narrate_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>