src/main/default/objects/narrate_LoggingSetting__mdt/fields/narrate_Loggers__c.field-meta.xml
<CustomField>
    <fullName>narrate_Loggers__c</fullName>
    <label>Loggers</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>