src/main/default/objects/narrate_LoggingSetting__mdt/fields/narrate_Logic__c.field-meta.xml
<CustomField>
    <fullName>narrate_Logic__c</fullName>
    <label>Logic</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>