src/main/default/objects/narrate_LoggingSetting__mdt/fields/narrate_Value__c.field-meta.xml
<CustomField>
    <fullName>narrate_Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>