src/main/default/objects/narrate_LoggingSetting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>narrate_Active__c</columns>
    <columns>MasterLabel</columns>
    <columns>narrate_Loggers__c</columns>
    <columns>narrate_Logic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>